--- a/kauck_kyle_project2/gold_app/index.html
+++ b/kauck_kyle_project2/gold_app/index.html
@@ -19,7 +19,7 @@ May 9, 2013
         <link rel="stylesheet" type="text/css" href="css/styles.css" />
         <title>Game Tracker</title>
     </head>
-    <body>
+    <body id="mainPage">
     	
     <!-- Index Page for App -->	
 	<div data-role="page" id="index">
@@ -35,11 +35,8 @@ May 9, 2013
 		    <div class="cta">
 			<center><a href="additem.html" data-ajax="false"><img src="img/logoCTA.gif" /></a></center><br />
 		    </div>
-			<div>
-			    <input type="search" class="gameSearch" data-clear-btn="true" data-icon="search" placeholder="Search for a Game!"/>
-			</div>
 		    <div class="browseCategories">
-			<ul data-role="listview" data-inset="true" data-theme="c">
+			<ul data-role="listview" data-filter="true" data-filter-placeholder="Search for a console..." data-inset="true" data-theme="c">
 			    <li data-role="list-divider" data-theme="a">Browse Games by Console...</li>
 			    <li id="xboxJSON"><a href="#xbox360"><img src="img/360icon.gif" class="ui-li-icon">Xbox 360</a></li>
 			    <li id="ps3JSON"><a href="#ps3"><img src="img/ps3Icon.gif" class="ui-li-icon">Playstation 3</a></li>
@@ -439,7 +436,7 @@ May 9, 2013
     <!-- Javascript/jQM Script Loading -->
 	<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
 	<script src="js/json.js" language="javascript" type="text/javascript"></script>
-        <script src="js/dummy.js" language="javascript" type="text/javascript"></script>
+        <script src="js/main.js" language="javascript" type="text/javascript"></script>
         <script src="http://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.min.js"></script>
     </body>
 </html>
