--- a/kauck_kyle_project2/bronze_app/additem.html
+++ b/kauck_kyle_project2/bronze_app/additem.html
@@ -77,6 +77,6 @@ May 7, 2013
             <p id="thankYou"><small>Thank you for choosing Game Tracker! For all of your game catalogue needs!</small></p>
         </footer>
         <script src="js/json.js" language="javascript" type="text/javascript"></script>
-        <script src="js/main.js" language="javascript" type="text/javascript"></script>
+        <script src="js/additem.js" language="javascript" type="text/javascript"></script>
     </body>
 </html>
