--- a/kauck_kyle_project2/gold_app/index.html
+++ b/kauck_kyle_project2/gold_app/index.html
@@ -92,10 +92,10 @@ May 9, 2013
 		</div>
 		<div data-role="content">
 		    <div data-role="controlgroup" class="ghButtons">
-			<a href="../bronze_app/index.html" data-role="button" data-icon="arrow-r" data-iconpos="right">Bronze App</a>
-		        <a href="http://g78624.github.io/MIU/kauck_kyle_project2/gold_app/" data-role="button" data-icon="arrow-r" data-iconpos="right">GH-Gold App</a>
-		        <a href="http://g78624.github.io/MIU/kauck_kyle_project2/bronze_app/" data-role="button" data-icon="arrow-r" data-iconpos="right">GH-Bronze App</a>
-		        <a href="https://github.com/g78624/MIU/tree/gh-pages/kauck_kyle_project2" data-role="button" data-icon="arrow-r" data-iconpos="right">GH Repo</a>
+			<a href="../bronze_app/index.html" data-ajax="false" data-role="button" data-icon="arrow-r" data-iconpos="right">Bronze App</a>
+		        <a href="http://g78624.github.io/MIU/kauck_kyle_project2/gold_app/" data-ajax="false" data-role="button" data-icon="arrow-r" data-iconpos="right">GH-Gold App</a>
+		        <a href="http://g78624.github.io/MIU/kauck_kyle_project2/bronze_app/" data-ajax="false" data-role="button" data-icon="arrow-r" data-iconpos="right">GH-Bronze App</a>
+		        <a href="https://github.com/g78624/MIU/tree/gh-pages/kauck_kyle_project2" data-ajax="false" data-role="button" data-icon="arrow-r" data-iconpos="right">GH Repo</a>
 		    </div>
 		</div>
 	    </article>
