--- a/kauck_kyle_project2/bronze_app/index.html
+++ b/kauck_kyle_project2/bronze_app/index.html
@@ -346,7 +346,7 @@ May 9, 2013
 	    <article>
 		<div data-role="content">
 		    <div class="cta">
-			<a href="#additem" data-ajax="false"><img src="img/logoCTA.gif" /></a>
+			<a href="additem" data-ajax="false"><img src="img/logoCTA.gif" /></a>
 		    </div>
 		    <div data-role="collapsible-set">
 			<div data-role="collapsible" data-collapsed="true">
@@ -395,7 +395,7 @@ May 9, 2013
 	    <article>
 		<div data-role="content">
 		    <div class="cta">
-			<a href="#additem" data-ajax="false"><img src="img/logoCTA.gif" /></a>
+			<a href="additem" data-ajax="false"><img src="img/logoCTA.gif" /></a>
 		    </div>
 		    <div class="newsStream">
 			<br />
