--- a/kauck_kyle_project2/bronze_app/index.html
+++ b/kauck_kyle_project2/bronze_app/index.html
@@ -53,28 +53,28 @@ May 9, 2013
 				<div data-role="ui-gird-a" class="centerPage">
 				    <div class="ui-grid-a">
 					<div class="ui-block-a">
-					    <div class="ui-bar ui-bar-c">
+					    <a href="#error"><div class="ui-bar ui-bar-c">
 						<p>Red Dead Redemption</p>
 						<img src="img/xbox360.gif" />
-					    </div>
+					    </div></a>
 					</div>
 					<div class="ui-block-b">
-					    <div class="ui-bar ui-bar-c">
+					    <a href="#error"><div class="ui-bar ui-bar-c">
 						<p>Grand Theft Auto</p>
 						<img src="img/xbox360.gif" />
-					    </div>
+					    </div></a>
 					</div>
 					<div class="ui-block-a">
-					    <div class="ui-bar ui-bar-c">
+					    <a href="#error"><div class="ui-bar ui-bar-c">
 						<p>BioShock Infinite</p>
 						<img src="img/xbox360.gif" />
-					    </div>
+					    </div></a>
 					</div>
 					<div class="ui-block-b">
-					    <div class="ui-bar ui-bar-c">
+					    <a href="#error"><div class="ui-bar ui-bar-c">
 						<p>Halo 4</p>
 						<img src="img/xbox360.gif" />
-					    </div>
+					    </div></a>
 					</div>
 				    </div>
 				</div>
@@ -86,28 +86,28 @@ May 9, 2013
 				<div data-role="ui-gird-a" class="centerPage">
 				    <div class="ui-grid-a">
 					<div class="ui-block-a">
-					    <div class="ui-bar ui-bar-c">
+					    <a href="#error"><div class="ui-bar ui-bar-c">
 						<p>MLB The Show 13</p>
 						<img src="img/playstationThree.gif" />
-					    </div>
+					    </div></a>
 					</div>
 					<div class="ui-block-b">
-					    <div class="ui-bar ui-bar-c">
+					    <a href="#error"><div class="ui-bar ui-bar-c">
 						<p>Dishonored</p>
 						<img src="img/playstationThree.gif" />
-					    </div>
+					    </div></a>
 					</div>
 					<div class="ui-block-a">
-					    <div class="ui-bar ui-bar-c">
+					    <a href="#error"><div class="ui-bar ui-bar-c">
 						<p>Final Fantasy 13</p>
 						<img src="img/playstationThree.gif" />
-					    </div>
+					    </div></a>
 					</div>
 					<div class="ui-block-b">
-					    <div class="ui-bar ui-bar-c">
+					    <a href="#error"><div class="ui-bar ui-bar-c">
 						<p>Walking Dead</p>
 						<img src="img/playstationThree.gif" />
-					    </div>
+					    </div></a>
 					</div>
 				    </div>
 				</div>
@@ -121,28 +121,28 @@ May 9, 2013
 				<div data-role="ui-gird-a" class="centerPage">
 				    <div class="ui-grid-a">
 					<div class="ui-block-a">
-					    <div class="ui-bar ui-bar-c">
+					    <a href="#error"><div class="ui-bar ui-bar-c">
 						<p>Super Mario Wii U</p>
 						<img src="img/wiiU.gif" />
-					    </div>
+					    </div></a>
 					</div>
 					<div class="ui-block-b">
-					    <div class="ui-bar ui-bar-c">
+					    <a href="#error"><div class="ui-bar ui-bar-c">
 						<p>Mass Effect 3</p>
 						<img src="img/wiiU.gif" />
-					    </div>
+					    </div></a>
 					</div>
 					<div class="ui-block-a">
-					    <div class="ui-bar ui-bar-c">
+					    <a href="#error"><div class="ui-bar ui-bar-c">
 						<p>Pikmin 3</p>
 						<img src="img/wiiU.gif" />
-					    </div>
+					    </div></a>
 					</div>
 					<div class="ui-block-b">
-					    <div class="ui-bar ui-bar-c">
+					    <a href="#error"><div class="ui-bar ui-bar-c">
 						<p>The Legend of Zelda</p>
 						<img src="img/wiiU.gif" />
-					    </div>
+					    </div></a>
 					</div>
 				    </div>
 				</div>
@@ -154,28 +154,28 @@ May 9, 2013
 				<div data-role="ui-gird-a" class="centerPage">
 				    <div class="ui-grid-a">
 					<div class="ui-block-a">
-					    <div class="ui-bar ui-bar-c">
+					    <a href="#error"><div class="ui-bar ui-bar-c">
 						<p>Potral 2</p>
 						<img src="img/pc.gif" />
-					    </div>
+					    </div></a>
 					</div>
 					<div class="ui-block-b">
-					    <div class="ui-bar ui-bar-c">
+					    <a href="#error"><div class="ui-bar ui-bar-c">
 						<p>World of Warcraft</p>
 						<img src="img/pc.gif" />
-					    </div>
+					    </div></a>
 					</div>
 					<div class="ui-block-a">
-					    <div class="ui-bar ui-bar-c">
+					    <a href="#error"><div class="ui-bar ui-bar-c">
 						<p>Counter-Strike</p>
 						<img src="img/pc.gif" />
-					    </div>
+					    </div></a>
 					</div>
 					<div class="ui-block-b">
-					    <div class="ui-bar ui-bar-c">
+					    <a href="#error"><div class="ui-bar ui-bar-c">
 						<p>Simcity</p>
 						<img src="img/pc.gif" />
-					    </div>
+					    </div></a>
 					</div>
 				    </div>
 				</div>
@@ -188,28 +188,28 @@ May 9, 2013
 				<div data-role="ui-gird-a" class="centerPage">
 				    <div class="ui-grid-a">
 					<div class="ui-block-a">
-					    <div class="ui-bar ui-bar-c">
+					    <a href="#error"><div class="ui-bar ui-bar-c">
 						<p>Luigi's Mansion</p>
 						<img src="img/nintendo3ds.gif" />
-					    </div>
+					    </div></a>
 					</div>
 					<div class="ui-block-b">
-					    <div class="ui-bar ui-bar-c">
+					    <a href="#error"><div class="ui-bar ui-bar-c">
 						<p>Fire Emblem</p>
 						<img src="img/nintendo3ds.gif" />
-					    </div>
+					    </div></a>
 					</div>
 					<div class="ui-block-a">
-					    <div class="ui-bar ui-bar-c">
+					    <a href="#error"><div class="ui-bar ui-bar-c">
 						<p>Pokemon Black</p>
 						<img src="img/nintendo3ds.gif" />
-					    </div>
+					    </div></a>
 					</div>
 					<div class="ui-block-b">
-					    <div class="ui-bar ui-bar-c">
+					    <a href="#error"><div class="ui-bar ui-bar-c">
 						<p>Legend of Zelda</p>
 						<img src="img/nintendo3ds.gif" />
-					    </div>
+					    </div></a>
 					</div>
 				    </div>
 				</div>
@@ -222,28 +222,28 @@ May 9, 2013
 				<div data-role="ui-gird-a" class="centerPage">
 				    <div class="ui-grid-a">
 					<div class="ui-block-a">
-					    <div class="ui-bar ui-bar-c">
+					    <a href="#error"><div class="ui-bar ui-bar-c">
 						<p>Super Stardust</p>
 						<img src="img/playstationVita.gif" />
-					    </div>
+					    </div></a>
 					</div>
 					<div class="ui-block-b">
-					    <div class="ui-bar ui-bar-c">
+					    <a href="#error"><div class="ui-bar ui-bar-c">
 						<p>MLB The Show 12</p>
 						<img src="img/playstationVita.gif" />
-					    </div>
+					    </div></a>
 					</div>
 					<div class="ui-block-a">
-					    <div class="ui-bar ui-bar-c">
+					    <a href="#error"><div class="ui-bar ui-bar-c">
 						<p>Uncharted</p>
 						<img src="img/playstationVita.gif" />
-					    </div>
+					    </div></a>
 					</div>
 					<div class="ui-block-b">
-					    <div class="ui-bar ui-bar-c">
+					    <a href="#error"><div class="ui-bar ui-bar-c">
 						<p>Playstation Battle All-Stars</p>
 						<img src="img/playstationVita.gif" />
-					    </div>
+					    </div></a>
 					</div>
 				    </div>
 				</div>
@@ -255,28 +255,28 @@ May 9, 2013
 				<div data-role="ui-gird-a" class="centerPage">
 				    <div class="ui-grid-a">
 					<div class="ui-block-a">
-					    <div class="ui-bar ui-bar-c">
+					    <a href="#error"><div class="ui-bar ui-bar-c">
 						<p>Angry Birds</p>
 						<img src="img/iPhone.gif" />
-					    </div>
+					    </div></a>
 					</div>
 					<div class="ui-block-b">
-					    <div class="ui-bar ui-bar-c">
+					    <a href="#error"><div class="ui-bar ui-bar-c">
 						<p>Monster Dash</p>
 						<img src="img/iPhone.gif" />
-					    </div>
+					    </div></a>
 					</div>
 					<div class="ui-block-a">
-					    <div class="ui-bar ui-bar-c">
+					    <a href="#error"><div class="ui-bar ui-bar-c">
 						<p>Punch Quest</p>
 						<img src="img/iPhone.gif" />
-					    </div>
+					    </div></a>
 					</div>
 					<div class="ui-block-b">
-					    <div class="ui-bar ui-bar-c">
+					    <a href="#error"><div class="ui-bar ui-bar-c">
 						<p>Mutant Mudds</p>
 						<img src="img/iPhone.gif" />
-					    </div>
+					    </div></a>
 					</div>
 				    </div>
 				</div>
@@ -289,28 +289,28 @@ May 9, 2013
 				<div data-role="ui-gird-a" class="centerPage">
 				    <div class="ui-grid-a">
 					<div class="ui-block-a">
-					    <div class="ui-bar ui-bar-c">
+					    <a href="#error"><div class="ui-bar ui-bar-c">
 						<p>Angry Birds Rio</p>
 						<img src="img/android.gif" />
-					    </div>
+					    </div></a>
 					</div>
 					<div class="ui-block-b">
-					    <div class="ui-bar ui-bar-c">
+					    <a href="#error"><div class="ui-bar ui-bar-c">
 						<p>Game Dev Story</p>
 						<img src="img/android.gif" />
-					    </div>
+					    </div></a>
 					</div>
 					<div class="ui-block-a">
-					    <div class="ui-bar ui-bar-c">
+					    <a href="#error"><div class="ui-bar ui-bar-c">
 						<p>Scribblenauts</p>
 						<img src="img/android.gif" />
-					    </div>
+					    </div></a>
 					</div>
 					<div class="ui-block-b">
-					    <div class="ui-bar ui-bar-c">
+					    <a href="#error"><div class="ui-bar ui-bar-c">
 						<p>Sorcery!</p>
 						<img src="img/android.gif" />
-					    </div>
+					    </div></a>
 					</div>
 				    </div>
 				</div>
@@ -461,7 +461,7 @@ May 9, 2013
 	    <article>
 		<div data-role="content">
     		    <h2>404 Error!</h2>
-		    <p>I am sorry to report that unfortunately one of my Full Sail Professors ran away with this page! I am currently in the process of finding where they hid it!</p>
+		    <p>Sorry, but it appears as this game does not have any information at the current time!</p>
 		</div>
 	    </article>
 	    
