Fine tuned a couple last pieces of HTML
Changed a bit of wording May 16, 2013

--- a/kauck_kyle_project2/bronze_app/index.html
+++ b/kauck_kyle_project2/bronze_app/index.html
@@ -326,7 +326,7 @@ May 9, 2013
 			<ul>
 			    <li><a href="#index" data-icon="home" data-iconpos="top" class="ui-btn-active ui-state-persist">Home</a></li>
 			    <li><a href="#info" data-icon="info" data-iconpos="top">Info</a></li>
-			    <li><a href="#news" data-icon="star" data-iconpos="top">News</a></li>
+			    <li><a href="#news" data-icon="star" data-iconpos="top">Recently Added</a></li>
 			</ul>
 		    </div>
 		</div>
@@ -364,7 +364,7 @@ May 9, 2013
 			<a href="../gold_app/index.html" data-ajax="false" data-role="button" data-icon="arrow-r" data-iconpos="right">Gold App</a>
 		        <a href="http://g78624.github.io/MIU/kauck_kyle_project2/gold_app/" data-ajax="false" data-role="button" data-icon="arrow-r" data-iconpos="right">GH-Gold App</a>
 		        <a href="http://g78624.github.io/MIU/kauck_kyle_project2/bronze_app/" data-ajax="false" data-role="button" data-icon="arrow-r" data-iconpos="right">GH-Bronze App</a>
-		        <a href="https://github.com/g78624/MIU/tree/gh-pages/kauck_kyle_project2" data-ajax="false" data-role="button" data-icon="arrow-r" data-iconpos="right">GH Repo</a>
+		        <a href="https://github.com/g78624/MIU/tree/master/kauck_kyle_project2" data-ajax="false" data-role="button" data-icon="arrow-r" data-iconpos="right">GH Repo</a>
 		    </div>
 		</div>
 	    </article>
@@ -375,7 +375,7 @@ May 9, 2013
 			<ul>
 			    <li><a href="#index" data-icon="home" data-iconpos="top">Home</a></li>
 			    <li><a href="#info" data-icon="info" data-iconpos="top" class="ui-btn-active ui-state-persist">Info</a></li>
-			    <li><a href="#news" data-icon="star" data-iconpos="top">News</a></li>
+			    <li><a href="#news" data-icon="star" data-iconpos="top">Recently Added</a></li>
 			</ul>
 		    </div>
 		</div>
@@ -417,7 +417,7 @@ May 9, 2013
 				<h3>Dishonored</h3>
 				<p class="newsfeedGame">Console: Playstation 4</p>
 			    </a></li>
-			    <li data-role="list-divider">Added Yesterday</li>
+			    <li data-role="list-divider">Games You Added Yesterday</li>
 			    <li><a href="#error">
 				<h3>Madden 13</h3>
 				<p class="newsfeedGame">Console: Xbox 360</p>
@@ -441,7 +441,7 @@ May 9, 2013
 			<ul>
 			    <li><a href="#index" data-icon="home" data-iconpos="top">Home</a></li>
 			    <li><a href="#info" data-icon="info" data-iconpos="top">Info</a></li>
-			    <li><a href="#news" data-icon="star" data-iconpos="top" class="ui-btn-active ui-state-persist">News</a></li>
+			    <li><a href="#news" data-icon="star" data-iconpos="top" class="ui-btn-active ui-state-persist">Recently Added</a></li>
 			</ul>
 		    </div>
 		</div>
@@ -471,7 +471,7 @@ May 9, 2013
 			<ul>
 			    <li><a href="#index" data-icon="home" data-iconpos="top">Home</a></li>
 			    <li><a href="#info" data-icon="info" data-iconpos="top">Info</a></li>
-			    <li><a href="#news" data-icon="star" data-iconpos="top">News</a></li>
+			    <li><a href="#news" data-icon="star" data-iconpos="top">Recently Added</a></li>
 			</ul>
 		    </div>
 		</div>
