Minor updates to HTML, Major to JS
May 19, 2013

--- a/kauck_kyle_project3/gold_app/index.html
+++ b/kauck_kyle_project3/gold_app/index.html
@@ -221,7 +221,7 @@ May 9, 2013
 	    
 	    <article>
 		<div data-role="content" data-filter="true">
-		    <form action="" method="post" id="addGameForm">
+		    <form action="" id="addGameForm">
 			
 			<span id="required">
 			    * Denotes Required Field
@@ -236,14 +236,14 @@ May 9, 2013
 			    <label for="consoles">* Consoles:</label>
 			    <select name="consoles" id="consoles" data-native-menu="false" class="required" />
 				<option data-place-holder="true" value>--Please Select A Console--</option>
-				<option value="xbox360">Xbox 360</option>
-				<option value="playstation3">Playstation 3</option>
-				<option value="wiiU">Nintendo Wii U</option>
-				<option value="pc">PC</option>
-				<option value="nintendo3ds">Nintendo 3DS</option>
-				<option value="playstationVita">Playstation Vita</option>
-				<option value="iphone">iPhone/iPad</option>
-				<option value="android">Android</option>
+				<option value="Xbox 360">Xbox 360</option>
+				<option value="Playstation 3">Playstation 3</option>
+				<option value="Nintendo Wii U">Nintendo Wii U</option>
+				<option value="PC">PC</option>
+				<option value="Nintendo 3DS">Nintendo 3DS</option>
+				<option value="Playstation Vita">Playstation Vita</option>
+				<option value="iPhone/iPad">iPhone/iPad</option>
+				<option value="Android">Android</option>
 			    </select>
 			</div>
 			
@@ -284,7 +284,7 @@ May 9, 2013
 			</div>
 			
 			<div class="ui-grid-solo">
-			    <div class="ui-block-a"><input value="Add My Game!" data-theme="b" type="submit"></div>
+			    <div class="ui-block-a"><input value="Add My Game!" id="submitGame" data-theme="b" type="submit"></div>
 			</div>
 			
 			<div class="ui-grid-solo">
@@ -298,7 +298,7 @@ May 9, 2013
 		    <!--<div id ="gameInfoDisplay" data-role="content"></div> -->
 		    <nav>
 			<a href="#" id="clearData">Clear Stored Data</a>
-			<a href="#" id="displayData">Display Data</a>
+			<a href="#display" id="displayData">Display Data</a>
 			<a href="#" id="addNewGame" style="display:none;">Add New Game</a>
 		    </nav>
 		</div>
