--- a/kauck_kyle_project3/gold_app/index.html
+++ b/kauck_kyle_project3/gold_app/index.html
@@ -255,7 +255,8 @@ May 9, 2013
 			
 			<div data-role="fieldcontain">
 			    <label for="dateAdded">* Date Added:</label>
-			    <input type="date" name="dateAdded" id="dateAdded" class="required" placeholder="Date Format: YYYY-MM-DD" />
+			    <input name="dateAdded" id="dateAdded" class="required" placeholder="Date Format: YYYY-MM-DD" />
+			    <span id="example">Date Format: YYYY-MM-DD</span>
 			</div>
 			
 			<div data-role="fieldcontain">
@@ -596,6 +597,7 @@ May 9, 2013
 	<!-- Javascript/jQM Script Loading -->
 	<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
 	<script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.11.1/jquery.validate.js"></script>
+	<script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"</script>
 	<script src="js/json.js" language="javascript" type="text/javascript"></script>
         <script src="js/main.js" language="javascript" type="text/javascript"></script>
         <script src="http://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.min.js"></script>
