Testing Error Solutions
May 21, 2013

--- a/kauck_kyle_project3/gold_app/index.html
+++ b/kauck_kyle_project3/gold_app/index.html
@@ -255,7 +255,7 @@ May 9, 2013
 			
 			<div data-role="fieldcontain">
 			    <label for="dateAdded">* Date Added:</label>
-			    <input name="dateAdded" id="dateAdded" class="required" placeholder="Date Format: YYYY-MM-DD" />
+			    <input type="text" name="dateAdded" id="dateAdded" class="required" placeholder="Date Format: YYYY-MM-DD" />
 			    <span id="example">Date Format: YYYY-MM-DD</span>
 			</div>
 			
