Tweaking Bronze app styling
May 21, 2013

--- a/kauck_kyle_project3/bronze_app/index.html
+++ b/kauck_kyle_project3/bronze_app/index.html
@@ -105,7 +105,7 @@ May 9, 2013
 					</div>
 					<div class="ui-block-b">
 					    <a href="#error"><div class="ui-bar ui-bar-c">
-						<p>Walking Dead</p><br />
+						<p>Walking Dead</p>
 						<img src="img/playstationThree.gif" />
 					    </div></a>
 					</div>
@@ -128,7 +128,7 @@ May 9, 2013
 					</div>
 					<div class="ui-block-b">
 					    <a href="#error"><div class="ui-bar ui-bar-c">
-						<p>Mass Effect 3</p><br />
+						<p>Mass Effect 3</p>
 						<img src="img/wiiU.gif" />
 					    </div></a>
 					</div>
@@ -256,7 +256,7 @@ May 9, 2013
 				    <div class="ui-grid-a">
 					<div class="ui-block-a">
 					    <a href="#error"><div class="ui-bar ui-bar-c">
-						<p>Angry Birds</p>
+						<p>Angry Birds</p><br />
 						<img src="img/iPhone.gif" />
 					    </div></a>
 					</div>
