Nearly final code - Bronze completed
May 22, 2013

--- a/kauck_kyle_project3/gold_app/index.html
+++ b/kauck_kyle_project3/gold_app/index.html
@@ -296,11 +296,11 @@ May 9, 2013
 			
 		    </form>
 		    
-		    <!--<div id ="gameInfoDisplay" data-role="content"></div> -->
 		    <nav>
-			<a href="#" id="clearData">Clear Stored Data</a>
-			<a href="#display" id="displayData">Display Data</a>
-			<a href="#" id="addNewGame" style="display:none;">Add New Game</a>
+			<fieldset class="ui-grid-a">
+			    <div class="ui-block-a"><a href="#" data-role="button" id="clearData">Clear Stored Data</a></div>
+			    <div class="ui-block-b"><a href="#display" data-role="button" id="displayData">Display Data</a></div>
+			</fieldset>
 		    </nav>
 		</div>
 	    </article>
