Proper edits to content Gold/Bronze
May 23, 2013

--- a/kauck_kyle_project3/bronze_app/additem.html
+++ b/kauck_kyle_project3/bronze_app/additem.html
@@ -48,7 +48,7 @@ May 13, 2013
                     <!-- Date for when you added the game to the form -->
                     <div id="dateError">
                     	<p><label for="dateAdded">* Date Added: </label><input type="date" id="dateAdded"  /><br />
-			<span id="inputHint">Date Format: YYYY MM DD</span></p>
+			<span id="inputHint">Date Format: MM/DD/YYYY</span></p>
                     </div>
                     <!-- Radio boxes for if the game have multiplayer -->
                     <div id="multiplayerError">
