--- a/kauck_kyle_project4/bronze_app/additem.html
+++ b/kauck_kyle_project4/bronze_app/additem.html
@@ -21,7 +21,7 @@ May 13, 2013
     <body>
     <div class="container">
         <header>
-            <h1 id="formHeader"><a id="homePage" href="index.html">Game Tracker</a></h1>
+            <h1 id="formHeader"><a id="homePage" href="index.html"><img src="img/header.png" class="logo"></a></h1>
             <!--<h1><a id="homePage" href="index.html">Game Tracker</a></h1>-->
         </header>
         <!-- Creating the form used for this page -->
