Bronze app minor tweaking
May 30, 2013

--- a/kauck_kyle_project4/bronze_app/index.html
+++ b/kauck_kyle_project4/bronze_app/index.html
@@ -341,6 +341,7 @@ May 26, 2013
 	    <header>
 		<div data-role="header" data-position="fixed" class="header" data-theme="a">
 		    <h1 id="aboutPage"><img src="img/header.png" class="logo"></h1>
+		    <h2>Game Tracker Info</h2>
 		</div>
 	    </header>
 	    
@@ -391,6 +392,7 @@ May 26, 2013
 	    <header>
 		<div data-role="header" data-position="fixed" class="header" data-theme="a">
 		    <h1 id="aboutPage"><img src="img/header.png" class="logo"></h1>
+		    <h2>Recently Added Games</h2>
 		</div>
 	    </header>
 	    
